--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,12 @@
     "gulpfile.js"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.3"
   },
   "devDependencies": {
     "test-fixture": "polymerelements/test-fixture#^1.0.0",
