--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.3",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-    "iron-icons": "PolymerElements/iron-icons#~1.0.3"
+    "iron-icons": "PolymerElements/iron-icons#~1.0.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.3"
   },
   "devDependencies": {
     "test-fixture": "polymerelements/test-fixture#^1.0.0",
