--- a/bower.json
+++ b/bower.json
@@ -23,12 +23,12 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
-    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
-    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-    "iron-icons": "PolymerElements/iron-icons#~1.0.3",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.3"
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.3"
   },
   "devDependencies": {
     "test-fixture": "polymerelements/test-fixture#^1.0.0",
@@ -38,8 +38,9 @@
     "paper-input": "PolymerElements/paper-input#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^1.0.0",
     "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-    "iron-icon": "PolymerElements/iron-icon#~1.0.0",
-    "iron-icons": "PolymerElements/iron-icons#~1.0.1",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0"
+    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.1",
+    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
+    "air-cruddy": "FiveElements/air-cruddy#^0.0.0"
   }
 }
