--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "test-fixture": "polymerelements/test-fixture#^1.0.0",
     "iron-component-page": "polymerelements/iron-component-page#^1.0.0",
-    "web-component-tester": "*",
+    "web-component-tester": "^3.3.22",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^1.0.0",
