--- a/bower.json
+++ b/bower.json
@@ -22,13 +22,17 @@
     "gulpfile.js"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^1.0.6",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.3",
+    "iron-icon": "PolymerElements/iron-icon#~1.0.5",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.3",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.3",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
+    "paper-item": "PolymerElements/paper-item#~1.0.3",
+    "paper-menu": "PolymerElements/paper-menu#~1.1.1",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4",
-    "iron-icons": "PolymerElements/iron-icons#^1.0.3",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.3"
+    "polymer": "Polymer/polymer#^1.0.0"
   },
   "devDependencies": {
     "test-fixture": "polymerelements/test-fixture#^1.0.0",
@@ -40,7 +44,6 @@
     "paper-styles": "PolymerElements/paper-styles#^1.0.0",
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-icons": "PolymerElements/iron-icons#^1.0.1",
-    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
-    "air-cruddy": "FiveElements/air-cruddy#master"
+    "paper-toast": "PolymerElements/paper-toast#^1.0.0"
   }
 }
