--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "gulpfile.js"
   ],
   "dependencies": {
+    "polymer": "Polymer/polymer#^1.7.0",
     "iron-dropdown": "PolymerElements/iron-dropdown#^1.0.6",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.3",
     "iron-icon": "PolymerElements/iron-icon#~1.0.5",
@@ -29,21 +30,24 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.3",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
-    "paper-item": "PolymerElements/paper-item#~1.0.3",
-    "paper-menu": "PolymerElements/paper-menu#~1.1.1",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4",
-    "polymer": "Polymer/polymer#^1.0.0"
+    "paper-item": "PolymerElements/paper-item#^1.2.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.1",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4"
   },
   "devDependencies": {
-    "test-fixture": "polymerelements/test-fixture#^1.0.0",
-    "iron-component-page": "polymerelements/iron-component-page#^1.0.0",
-    "web-component-tester": "^3.3.22",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.1",
+    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^1.0.0",
     "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.0.1",
-    "paper-toast": "PolymerElements/paper-toast#^1.0.0"
+    "air-cruddy": "FiveElements/air-cruddy"
+  },
+  "resolutions": {
+    "lodash": "^4.17.4"
   }
 }
