--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "earth-editable-layout",
   "private": true,
   "version": "0.0.1",
-  "description": "A Polymer element that manage Edit Layout",
+  "description": "A Polymer 2 element that manage Edit Layout",
   "main": "earth-editable-layout.html",
   "author": [
     "The Five Elements Authors"
@@ -22,32 +22,29 @@
     "gulpfile.js"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.7.0",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^1.0.6",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.3",
-    "iron-icon": "PolymerElements/iron-icon#~1.0.5",
-    "iron-icons": "PolymerElements/iron-icons#^1.0.3",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.3",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
-    "paper-item": "PolymerElements/paper-item#^1.2.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.1",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^2.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.0.1",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "paper-toast": "PolymerElements/paper-toast#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
-    "paper-button": "PolymerElements/paper-button#^1.0.0",
-    "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-    "air-cruddy": "FiveElements/air-cruddy"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0",
+    "air-cruddy": "FiveElements/air-cruddy#2-migration"
   },
   "resolutions": {
+    "polymer": "^2.0.0",
     "lodash": "^4.17.4"
   }
 }
