--- a/bower.json
+++ b/bower.json
@@ -37,11 +37,11 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
-    "paper-input": "PolymerElements/paper-input#^1.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-styles": "PolymerElements/paper-styles#^2.0.0",
-    "air-cruddy": "FiveElements/air-cruddy#2-migration"
+    "air-cruddy": "FiveElements/air-cruddy#master"
   },
   "resolutions": {
     "polymer": "^2.0.0",
