--- a/bower.json
+++ b/bower.json
@@ -23,24 +23,16 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^2.0.0",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^2.0.0",
+    "paper-drawer-panel": "PolymerElements/app-layout#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0"
+    "app-layout": "PolymerElements/app-layout#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
-    "paper-input": "PolymerElements/paper-input#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "paper-styles": "PolymerElements/paper-styles#^2.0.0",
     "air-cruddy": "FiveElements/air-cruddy#master"
   },
   "resolutions": {
