--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
     "paper-drawer-panel": "PolymerElements/app-layout#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "app-layout": "PolymerElements/app-layout#^2.0.0"
+    "app-layout": "PolymerElements/app-layout#^2.0.0",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
