--- a/bower.json
+++ b/bower.json
@@ -28,13 +28,15 @@
     "paper-drawer-panel": "PolymerElements/app-layout#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0"
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+    "paper-progress": "PolymerElements/paper-progress#^2.0.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "air-cruddy": "FiveElements/air-cruddy#master"
+    "air-cruddy": "FiveElements/air-cruddy#master",
+    "paper-input": "PolymerElements/paper-input#^2.0.1"
   },
   "resolutions": {
     "polymer": "^2.0.0",
