--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^2.0.1"
+    "paper-progress": "PolymerElements/paper-progress#^2.0.1",
+    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
