--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,9 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-progress": "PolymerElements/paper-progress#^2.0.1",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
