--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^2.0.0"
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
