--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,8 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "air-cruddy": "FiveElements/air-cruddy#master",
     "paper-input": "PolymerElements/paper-input#^2.0.1",
-    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0"
+    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^2.1.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
