--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "lint": "polymer lint  --no-follow-dependencies  --include-dependencies bower_components/*  --input *.html",
+    "analyze": "polymer analyze > analysis.json",
     "dev": "polymer serve -p 8080 | npm run watch",
     "test": "polymer test",
     "dev-install": "npm install -g bower polymer-cli browser-sync",
