--- a/bower.json
+++ b/bower.json
@@ -35,10 +35,10 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
-    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^2.0.1",
-    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1"
+    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^2.0.1"
   },
   "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
