--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
-    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^2.0.1"
+    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^2.0.1",
+    "app-localize-behavior": "PolymerElements/app-localize-behavior#^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
